--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(http://localhost/test/frontend-nanodegree-mobile-portfolio-master/css/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+  src: local('Open Sans'), local('OpenSans'), url(cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
 }
 @font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://localhost/test/frontend-nanodegree-mobile-portfolio-master/css/k3k702ZOKiLJc3WVjuplzKRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(k3k702ZOKiLJc3WVjuplzKRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
 }
 
 html { font-size: 100%; overflow-y: scroll; -webkit-tap-highlight-color: rgba(0,0,0,0); -ms-text-size-adjust: 100%;
